# Summarizer

./: .gitignore  README.md  calibre_sync.py  g4tests.py  pyproject.toml  sum_converter.py  summarizer.py  summarizer_sync.py  wiki_naming_and_synchronisation.md
converter_linux/: converter_linux.py  pyproject.toml
converter_macos/: converter_macos.py  pyproject.toml
migration/: migrate_filenames.py  naming.py  wiki_implementation_plan.md
summarizer_core/: pyproject.toml
summarizer_core/summarizer_core/: cache.py  engine.py  markdown.py  summarizer.py  utils.py
summarizer_gc_gemma4_31b/: pyproject.toml  summarizer_gc_gemma4_31b.py
summarizer_googlecloud/: pyproject.toml  summarizer_googlecloud.py
summarizer_linux/: pyproject.toml  sum_raum.md  summarizer_linux.py
summarizer_macos/: pyproject.toml  summarizer_macos.py
tests/: test_naming.py  test_naming_dryrun.py
web-interface/backend/: main.py
web-interface/frontend/: index.html  package.json
web-interface/frontend/src/: App.tsx  index.css
