[project]
name = "summarizer"
version = "0.1.0"
description = "MLX / Gemma 4 summarizer"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.3",
    "python-multipart>=0.0.22",
    "uvicorn>=0.42.0",
    "pyyaml>=6.0",
    "pillow>=10.0.0",
    "summarizer_core",
]

[tool.uv.sources]
summarizer_core = { path = "summarizer_core" }

