[project]
name = "converter-linux"
version = "0.1.0"
description = "Linux PDF and EPUB to Markdown converter using Docling and Pandoc"
requires-python = ">=3.13"
dependencies = [
    "docling>=2.84.0",
    "pypdf>=6.9.2",
    "torch>=2.4.0",
]

[project.scripts]
converter-linux = "converter_linux:main"
